trying to fix overlapping sponsor logos

--- a/css/agency.css
+++ b/css/agency.css
@@ -657,14 +657,13 @@ section h3.section-subheading {
 }
 
 
-.sponsor {
+/*.sponsor {
   padding-top: 20px;
-  /*padding-bottom: -20px;*/
   width: 200px;
   height: 150px;
   line-height: 100px;
   text-align: center;
-}
+}*/
 
 .sponsor img {
   vertical-align: middle;
